2014-09-13  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fr.po: Update by translation team.

2014-09-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Use dial_tty for status line, by Steven Jian.

2014-08-31  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fr.po: Update by translation team.

2014-08-04  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/id.po: Update by translation team.

2014-07-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/minicom.h: Fix name suffix for non-global
	configuration savings. By Henner Zeller.

	* man/minicom.1: Add 'U' key shortcut. By Henner Zeller.

2014-04-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: Implement HPA ESC sequence.

2014-03-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c, src/script.c: Unmask SIGALRM, #314618, Patch
	  by David Dominguez Bonini.

	* srv/vt100.c, src/minicom.c, src/minicom.h, man/minicom.1, NEWS:
	  Add delta timestamp mode.

	* configure.ac: Rename from configure.in

	* configure.in: Set version to 2.7.90

2014-01-01  Martin A. Godisch  <martin@godisch.de>

	* config.c: Fixed text width in history buffer message box
	  (Debian #470582).

	* minicom.1: Properly escaped dashes in manual page.

2013-12-31  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Updates for 2.7

	* configure.in: Set version to 2.7

2013-12-08  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.src, src/minicom.h, src/updown.c: Enlarge scr_name
	  variable. By Krzysztof Sywula.

2013-10-30  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Use version 1.14

	* configure.in: Add AM_PROG_AR, Gentoo bug #489734

2013-10-29  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/script.c, man/runscript.1: Add binary transmission feature
	  by Tobias Schlager.

2013-08-03  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Update to 1.13
